functions and methods fixed

--- a/books.html
+++ b/books.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Library</title>
-    <script src="ExploringJavaScriptObjects.js"></script>
 </head>
 <body>
     <label for="Search for a Title">Search for a Title</label>
@@ -12,11 +11,12 @@
     <br>
     <button id="search-title">Search Title</button>
     <br><br>
-
+    
     <label for="Search for an Author">Search for an Author</label>
     <input type="text" id="search-author" placeholder="Author">
     <br>
-    <button id="search-author">Search Author</button>
+    <button id="search-book-author">Search Author</button>
     
+    <script src="ExploringJavaScriptObjects.js"></script>
 </body>
 </html>
